<resources>
    <string name="app_name">TextModify</string>

    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>

    <string name="main_xposed_is_active">模块已激活</string>
    <string name="main_xposed_is_not_active">模块未激活</string>
    <string name="main_global_method">全局替换</string>
    <string name="main_appList_method">应用列表</string>
    <string name="main_log">日志</string>
    <string name="main_setting">设置</string>
    <string name="main_setting_disable">隐藏应用图标</string>
    <string name="main_setting_enable">显示应用图标</string>
    <string name="main_about">关于</string>

    <string name="globalMethod_topBar">全局替换</string>
    <string name="globalMethod_addButton">添加规则</string>

    <string name="appList_topBar">应用列表</string>

    <string name="appMethodInfo_add">添加规则</string>
    <string name="appMethodInfo_reboot">重启应用</string>

    <string name="about_donation_alipay">支付宝</string>
    <string name="about_donation_wechat">微信</string>
    <string name="about_donation">请作者吃好吃的</string>
    <string name="about_this">关于这个软件</string>
    <string name="about_this_p1">\t这是一个修改目标应用文字的Xposed模块，致敬原模块CustomText（作者liubaoyua），原模块由于安卓版本的升级已经无法稳定使用。</string>
    <string name="about_this_p2">\t由于安卓10以上版本限制，应用只能在私有目录下存储文件，导致Xposed无法读取应用规则的配置文件，我所能想到的解决方法就是在重启目标应用时注入配置文件，这就导致了更新配置文件后依赖此软件的重启目标应用功能。</string>
    <string name="about_future">待开发</string>
    <string name="about_future_p1">\t1.正则表达式匹配</string>
    <string name="about_future_p2">\t2.Class及控件选择器</string>
    <string name="about_future_p3">\t3.日志功能</string>
    <string name="about_future_p4">\t4.应用列表筛选及已有配置文件的优先排序</string>
    <string name="main_xposed_recheck">点击以刷新激活状态</string>
    <string name="menu_refresh">刷新</string>
    <string name="method_item_origintext">原文字：</string>
    <string name="method_item_newtext">替换文字：</string>
    <string name="addmethod_origintext">原文字</string>
    <string name="addmethod_newtext">新文字</string>
    <string name="addmethod_save">保存</string>
    <string name="addmethod_delete">删除</string>
    <string name="about_project">关于此项目</string>
    <string name="about_project_coolapk">\t作者酷安：Conastin</string>
    <string name="about_project_gitee">\tGithub：https://github.com/Conastin/TextModify</string>
    <string name="main_copyright">版权声明</string>
    <string name="main_copyright_p1">本软件为开源免费软件</string>
    <string name="main_copyright_p2">仅供学习交流使用</string>
    <string name="main_copyright_p3">切勿倒卖或进行违法犯罪活动</string>
</resources>