<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:stateListAnimator="@null">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topBar"
            style="@style/Theme.TextModify.TopBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gray_bottom_solid"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/main_check_xposed_active_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_red_solid"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingEnd="0dp"
                android:paddingBottom="20dp">

                <ImageView
                    android:id="@+id/main_check_xposed_active_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_is_not_active"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/main_check_xposed_active_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_xposed_is_not_active"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/main_xposed_recheck"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/globalMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_gray_solid"
                android:clickable="true"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingEnd="0dp"
                android:paddingBottom="20dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_global_method"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_global_method"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/appMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_gray_solid"
                android:clickable="true"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingEnd="0dp"
                android:paddingBottom="20dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_app_lst"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_appList_method"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>

            <!--                <LinearLayout-->
            <!--                    android:id="@+id/log"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_marginBottom="16dp"-->
            <!--                    android:background="@drawable/bg_white_solid"-->
            <!--                    android:gravity="center"-->
            <!--                    android:paddingLeft="10dp"-->
            <!--                    android:paddingTop="15dp"-->
            <!--                    android:paddingRight="0dp"-->
            <!--                    android:paddingBottom="15dp"-->
            <!--                    android:clickable="true"-->
            <!--                    android:focusable="true">-->

            <!--                    <ImageView-->
            <!--                        android:layout_width="20dp"-->
            <!--                        android:layout_height="20dp"-->
            <!--                        android:layout_marginLeft="20dp"-->
            <!--                        android:layout_marginRight="20dp"-->
            <!--                        android:src="@drawable/ic_log" />-->

            <!--                    <LinearLayout-->
            <!--                        android:layout_width="match_parent"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:orientation="horizontal">-->

            <!--                        <TextView-->
            <!--                            android:layout_width="wrap_content"-->
            <!--                            android:layout_height="wrap_content"-->
            <!--                            android:text="@string/main_log"-->
            <!--                            android:textSize="14sp" />-->

            <!--                    </LinearLayout>-->


            <!--                </LinearLayout>-->

            <LinearLayout
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_white_solid"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:paddingEnd="0dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_setting"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_setting"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_white_solid"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:paddingEnd="0dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_about"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_about"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_white_solid"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/main_copyright"
                        android:textColor="#2B2D42"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/main_copyright_p1"
                        android:textColor="#8D99AE"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/main_copyright_p2"
                        android:textColor="#8D99AE"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/main_copyright_p3"
                        android:textColor="#8D99AE"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>